# envless

./: .dockerignore  .env.example  .gitignore  .prettierignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yml  cypress.config.ts  docker-compose.yaml  docker-compose.yml  dump.rdb  jest.config.js  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  prettier.config.js  tailwind.config.js  theme.config.tsx  tsconfig.json  turbo.json  vercel.json  vitest.config.ts
.changeset/: config.json
.github/: pull_request_template.md
apps/cli/lib/locker/: Cargo.toml  README.md  package.json
apps/cli/lib/locker/src/: lib.rs
components/: Code.tsx  DateTimeAgo.tsx  Embedable.tsx  Navigation.tsx  TwoFactorModal.tsx  counters.tsx  twoFactorForm.tsx
deploy/: entrypoint.sh
emails/: DeleteProjectNotice.tsx  InviteLink.tsx  MagicLink.tsx  SecurityAlert.tsx  index.js  index.ts
env/: client.mjs  index.mjs  schema.mjs  server.mjs
hooks/: useCopyToClipBoard.ts  useFuse.ts
layouts/: Project.tsx  Settings.tsx
lib/: airtable.ts  audit.ts  crypto.ts  digest.ts  encryption.ts  fingerprint.ts  getBrowser.ts  github.ts  helpers.ts  log.ts  notion.ts  openpgp.ts  redis.ts  twoFactorAuth.ts  uaParser.ts
models/: SessionHistory.ts  member.ts  projects.ts  pullRequest.ts  session.ts
pages/: 404.tsx  _app.tsx  _document.tsx  _meta.json  another.mdx  auth.js  community.mdx  contribution.mdx  index.mdx  index.tsx  login.js  login.tsx  quickstart.mdx  signup.tsx  welcome.tsx
prisma/: db.sqlite  seed.ts  (+1 more)
(+855 files in other folders)
