[package]
name = "locker"
version = "0.1.0"
description = "Keyring bindings for node"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "2.0.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
